# AvarNLP

./: .gitignore  LICENSE  README.md  funding.json  pyproject.toml  run.py
configs/: data_evolution.json  training.json  training_evolution.json
docs/: eu-funding-opportunities.md  funding-research.md  nlnet-application-draft.md  platform-integration-report.md  shuttleworth-application-draft.md
src/: data_types.py
src/api/: demo.py  server.py
src/evaluation/: metrics.py
src/evolution/: data_evolution.py  fitness.py  training_evolution.py
src/scraping/: glosbe_scraper.py  magarulaw_seed.py  pipeline.py  wikipedia_extractor.py
src/training/: train_nllb.py
tests/: test_api.py  test_data_evolution.py  test_data_types.py  test_fitness.py  test_glosbe_scraper.py  test_magarulaw_seed.py  test_metrics.py  test_pipeline.py  test_training_evolution.py  test_wikipedia_extractor.py
